Adicionando documentação Swagger
